@@ -1,6 +1,7 @@
 optparse 1.3.1
 ==============
 * optparse should no longer give any warnings when options(warnPartialMatchArgs=TRUE).  Thanks Rich FitzJohn for patch.
+* print_help no longer throws an error if we have a default argument of length zero.  Thanks Benjamin Tyner for bug report.
 
 optparse 1.3.0
 ==============
